# panda_arm

./: .gitignore  README.md  moveit_resources_tree.txt  panda_pick_place_sim_tree.txt
install/: local_setup.sh  setup.sh
install/dual_arm_panda_moveit_config/share/ament_index/resource_index/parent_prefix_path/: dual_arm_panda_moveit_config
install/dual_arm_panda_moveit_config/share/dual_arm_panda_moveit_config/: local_setup.sh  package.sh
install/moveit_resources/share/ament_index/resource_index/parent_prefix_path/: moveit_resources
install/moveit_resources/share/moveit_resources/: local_setup.sh  package.sh
install/moveit_resources_fanuc_description/share/moveit_resources_fanuc_description/: local_setup.sh  package.sh
install/moveit_resources_fanuc_moveit_config/share/ament_index/resource_index/parent_prefix_path/: moveit_resources_fanuc_moveit_config
install/moveit_resources_fanuc_moveit_config/share/moveit_resources_fanuc_moveit_config/: local_setup.sh  package.sh
install/moveit_resources_panda_description/share/moveit_resources_panda_description/: local_setup.sh  package.sh
install/moveit_resources_panda_moveit_config/share/moveit_resources_panda_moveit_config/: local_setup.sh  package.sh
install/moveit_resources_pr2_description/share/moveit_resources_pr2_description/: local_setup.sh  package.sh
install/panda_moveit2_sim/share/ament_index/resource_index/parent_prefix_path/: panda_moveit2_sim
install/panda_moveit2_sim/share/panda_moveit2_sim/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/panda_moveit2_sim/share/panda_moveit2_sim/cmake/: panda_moveit2_simConfig.cmake
log/: latest_build
panda_moveit2_sim/: CMakeLists.txt  package.xml
panda_pick_place_sim/: CMakeLists.txt  package.xml
panda_pick_place_sim/launch/: demo.launch.py
src/panda_pick_place_sim/: CMakeLists.txt  package.xml  setup_env.sh
src/panda_pick_place_sim/config/: kinematics.yaml  moveit_controllers.yaml
src/panda_pick_place_sim/include/panda_pick_place_sim/: add_objects.hpp  gripper_control.hpp  motion_planner.hpp  pose_utils.hpp
src/panda_pick_place_sim/launch/: demo.launch.py
src/panda_pick_place_sim/src/: add_objects.cpp  gripper_control.cpp  main.cpp  motion_planner.cpp  pick_object.cpp  pose_utils.cpp
